--- a/s7_embedded_trials.ipynb
+++ b/s7_embedded_trials.ipynb
@@ -69,7 +69,8 @@
       "2 frames completed after 614.272 s...\n",
       "4 frames completed after 1228.516 s...\n",
       "6 frames completed after 1842.739 s...\n",
-      "8 frames completed after 2456.944 s...\n"
+      "8 frames completed after 2456.944 s...\n",
+      "10 frames completed after 3071.556 s...\n"
      ]
     }
    ],
