--- a/s5_embedded_trials.ipynb
+++ b/s5_embedded_trials.ipynb
@@ -94,10 +94,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "embedded.search('smln_1_random', obj, C)"
+    "embedded.search('smln_2_guided', obj, C)"
    ]
   },
   {
