--- a/s5_embedded_trials.ipynb
+++ b/s5_embedded_trials.ipynb
@@ -94,10 +94,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please commit relevant files and enter commit id (or \"q\" to quit): 81669667371cc670135b1d42bc9fd375aea88506\n"
+     ]
+    }
+   ],
    "source": [
     "embedded.search('smln_2_guided', obj, C)"
    ]
