--- a/s7_embedded_trials.ipynb
+++ b/s7_embedded_trials.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -70,7 +72,98 @@
       "4 frames completed after 1228.516 s...\n",
       "6 frames completed after 1842.739 s...\n",
       "8 frames completed after 2456.944 s...\n",
-      "10 frames completed after 3071.556 s...\n"
+      "10 frames completed after 3071.556 s...\n",
+      "12 frames completed after 3718.275 s...\n",
+      "14 frames completed after 4392.096 s...\n",
+      "16 frames completed after 5065.617 s...\n",
+      "18 frames completed after 5738.876 s...\n",
+      "20 frames completed after 6412.528 s...\n",
+      "22 frames completed after 7086.170 s...\n",
+      "24 frames completed after 7759.687 s...\n",
+      "26 frames completed after 8433.741 s...\n",
+      "28 frames completed after 9108.347 s...\n",
+      "30 frames completed after 9782.372 s...\n",
+      "32 frames completed after 10456.582 s...\n",
+      "34 frames completed after 11130.681 s...\n",
+      "36 frames completed after 11804.168 s...\n",
+      "38 frames completed after 12477.449 s...\n",
+      "40 frames completed after 13150.735 s...\n",
+      "42 frames completed after 13823.993 s...\n",
+      "44 frames completed after 14497.795 s...\n",
+      "46 frames completed after 15171.721 s...\n",
+      "48 frames completed after 15844.864 s...\n",
+      "50 frames completed after 16518.838 s...\n",
+      "52 frames completed after 17192.438 s...\n",
+      "54 frames completed after 17865.915 s...\n",
+      "56 frames completed after 18540.096 s...\n",
+      "58 frames completed after 19214.027 s...\n",
+      "60 frames completed after 19888.504 s...\n",
+      "62 frames completed after 20562.167 s...\n",
+      "64 frames completed after 21236.119 s...\n",
+      "66 frames completed after 21909.998 s...\n",
+      "68 frames completed after 22583.691 s...\n",
+      "70 frames completed after 23257.413 s...\n",
+      "72 frames completed after 23932.306 s...\n",
+      "74 frames completed after 24606.389 s...\n",
+      "76 frames completed after 25280.460 s...\n",
+      "78 frames completed after 25953.724 s...\n",
+      "80 frames completed after 26627.535 s...\n",
+      "82 frames completed after 27301.763 s...\n",
+      "84 frames completed after 27975.541 s...\n",
+      "86 frames completed after 28649.419 s...\n",
+      "88 frames completed after 29323.951 s...\n",
+      "90 frames completed after 29997.856 s...\n",
+      "92 frames completed after 30671.765 s...\n",
+      "94 frames completed after 31346.392 s...\n",
+      "96 frames completed after 32020.836 s...\n",
+      "98 frames completed after 32694.998 s...\n",
+      "100 frames completed after 33369.013 s...\n",
+      "102 frames completed after 34043.323 s...\n",
+      "104 frames completed after 34717.922 s...\n",
+      "106 frames completed after 35392.017 s...\n",
+      "108 frames completed after 36065.847 s...\n",
+      "110 frames completed after 36739.411 s...\n",
+      "112 frames completed after 37412.422 s...\n",
+      "114 frames completed after 38086.341 s...\n",
+      "116 frames completed after 38760.669 s...\n",
+      "118 frames completed after 39434.682 s...\n",
+      "120 frames completed after 40108.602 s...\n",
+      "122 frames completed after 40782.620 s...\n",
+      "124 frames completed after 41457.062 s...\n",
+      "126 frames completed after 42131.283 s...\n",
+      "128 frames completed after 42805.328 s...\n",
+      "130 frames completed after 43479.362 s...\n",
+      "132 frames completed after 44153.427 s...\n",
+      "134 frames completed after 44827.527 s...\n",
+      "136 frames completed after 45502.012 s...\n",
+      "138 frames completed after 46176.020 s...\n",
+      "140 frames completed after 46849.826 s...\n",
+      "142 frames completed after 47524.221 s...\n",
+      "144 frames completed after 48198.771 s...\n",
+      "146 frames completed after 48873.147 s...\n",
+      "148 frames completed after 49547.991 s...\n",
+      "150 frames completed after 50221.951 s...\n",
+      "152 frames completed after 50896.007 s...\n",
+      "154 frames completed after 51570.215 s...\n",
+      "156 frames completed after 52244.626 s...\n",
+      "158 frames completed after 52918.778 s...\n",
+      "160 frames completed after 53592.602 s...\n",
+      "162 frames completed after 54266.857 s...\n",
+      "164 frames completed after 54940.711 s...\n",
+      "166 frames completed after 55615.319 s...\n",
+      "168 frames completed after 56289.550 s...\n",
+      "170 frames completed after 56964.142 s...\n",
+      "172 frames completed after 57638.889 s...\n",
+      "174 frames completed after 58313.033 s...\n",
+      "176 frames completed after 58987.494 s...\n",
+      "178 frames completed after 59663.041 s...\n",
+      "180 frames completed after 60337.585 s...\n",
+      "182 frames completed after 61011.987 s...\n",
+      "184 frames completed after 61686.360 s...\n",
+      "186 frames completed after 62360.803 s...\n",
+      "188 frames completed after 63035.001 s...\n",
+      "190 frames completed after 63710.071 s...\n",
+      "192 frames completed after 64384.299 s...\n"
      ]
     }
    ],
@@ -231,11 +324,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Running network simulations...\n",
+      "Results: \n",
+      "{'STABILITY': 1.0, 'ANGLE': 0.26286692150994262, 'ACTIVITY': 2.7035641005745101, 'SPEED': 10.986904367137916}\n",
+      "\n",
+      "Saving response file...\n",
+      "\n",
+      "Building frames...\n",
+      "\n",
+      "Using activity file \"sims/embedded/smln_1/ntwk-16544-2.npy\".\n",
+      "Frames will be saved with prefix \"sims/embedded/smln_1/frames-16544-2/f-\".\n",
+      "Loading network activity...\n",
+      "Downsampling data from 2000.0 to 1000 fps...\n",
+      "Data downsampled.\n",
+      "Data loaded.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rkp/anaconda3/envs/py3/lib/python3.6/site-packages/scipy/sparse/compressed.py:774: SparseEfficiencyWarning: Changing the sparsity structure of a csc_matrix is expensive. lil_matrix is more efficient.\n",
+      "  SparseEfficiencyWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating and saving 200 frames...\n",
+      "64 frames completed after 608.686 s...\n",
+      "66 frames completed after 1216.989 s...\n",
+      "68 frames completed after 1825.343 s...\n",
+      "70 frames completed after 2433.742 s...\n",
+      "72 frames completed after 3042.053 s...\n",
+      "74 frames completed after 3650.399 s...\n",
+      "76 frames completed after 4258.722 s...\n",
+      "78 frames completed after 4867.015 s...\n",
+      "80 frames completed after 5475.344 s...\n",
+      "82 frames completed after 6083.738 s...\n",
+      "84 frames completed after 6692.007 s...\n",
+      "86 frames completed after 7300.362 s...\n",
+      "88 frames completed after 7908.715 s...\n",
+      "90 frames completed after 8517.099 s...\n",
+      "92 frames completed after 9125.434 s...\n",
+      "94 frames completed after 9733.865 s...\n",
+      "96 frames completed after 10342.210 s...\n",
+      "98 frames completed after 10950.455 s...\n",
+      "100 frames completed after 11558.665 s...\n",
+      "102 frames completed after 12167.046 s...\n",
+      "104 frames completed after 12775.446 s...\n",
+      "106 frames completed after 13383.816 s...\n",
+      "108 frames completed after 13992.130 s...\n",
+      "110 frames completed after 14600.495 s...\n",
+      "112 frames completed after 15208.809 s...\n",
+      "114 frames completed after 15817.167 s...\n",
+      "116 frames completed after 16425.478 s...\n",
+      "118 frames completed after 17033.765 s...\n",
+      "120 frames completed after 17642.058 s...\n",
+      "122 frames completed after 18250.291 s...\n",
+      "124 frames completed after 18858.596 s...\n",
+      "126 frames completed after 19466.895 s...\n",
+      "128 frames completed after 20075.170 s...\n",
+      "130 frames completed after 20683.446 s...\n",
+      "132 frames completed after 21291.679 s...\n",
+      "134 frames completed after 21899.910 s...\n",
+      "136 frames completed after 22508.157 s...\n",
+      "138 frames completed after 23116.477 s...\n",
+      "140 frames completed after 23724.732 s...\n",
+      "142 frames completed after 24333.029 s...\n",
+      "144 frames completed after 24941.215 s...\n",
+      "146 frames completed after 25549.105 s...\n",
+      "148 frames completed after 26157.019 s...\n",
+      "150 frames completed after 26764.995 s...\n",
+      "152 frames completed after 27372.881 s...\n",
+      "154 frames completed after 27980.796 s...\n",
+      "156 frames completed after 28588.635 s...\n",
+      "158 frames completed after 29196.491 s...\n",
+      "160 frames completed after 29804.401 s...\n",
+      "162 frames completed after 30412.370 s...\n",
+      "164 frames completed after 31020.232 s...\n",
+      "166 frames completed after 31628.236 s...\n",
+      "168 frames completed after 32236.093 s...\n",
+      "170 frames completed after 32843.926 s...\n",
+      "172 frames completed after 33451.885 s...\n",
+      "174 frames completed after 34059.780 s...\n",
+      "176 frames completed after 34667.681 s...\n",
+      "178 frames completed after 35275.625 s...\n",
+      "180 frames completed after 35883.447 s...\n",
+      "182 frames completed after 36491.274 s...\n",
+      "184 frames completed after 37099.136 s...\n",
+      "186 frames completed after 37707.214 s...\n",
+      "188 frames completed after 38315.180 s...\n",
+      "190 frames completed after 38923.363 s...\n",
+      "192 frames completed after 39531.685 s...\n",
+      "194 frames completed after 40139.965 s...\n",
+      "196 frames completed after 40748.019 s...\n",
+      "198 frames completed after 41355.954 s...\n",
+      "200 frames completed after 41963.865 s...\n",
+      "All frames written to disk.\n",
+      "\n",
+      "Making animation...\n",
+      "\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (720, 1080) to (720, 1088) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source images loaded.\n",
+      "Generating movie and saving at \"sims/embedded/smln_1/ntwk-16544-2.mp4\"...\n",
+      "Movie generated.\n"
+     ]
+    }
+   ],
    "source": [
     "TRIAL = 16544\n",
     "RUN = 2\n",
