Halfway point of refactor.

--- a/s3_lin_ridge_trials.ipynb
+++ b/s3_lin_ridge_trials.ipynb
@@ -9,22 +9,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import aux\n",
-    "from search import embedded_viz\n",
+    "from search import lin_ridge_viz\n",
     "\n",
-    "from search import embedded_global as C\n",
+    "from search import lin_ridge_global as C\n",
     "import PARAMETERS as P\n",
     "\n",
     "pre = {\n",
     "    'w_n_pc_ec_vs_dist': aux.load(C.PATH_W_N_PC_EC_VS_DIST),\n",
     "    'v_g_n_vs_w_n_pc_ec_fr_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Running network simulations...\n",
+      "Results: \n",
+      "{'STABILITY': 0.33333333333333331, 'ANGLE': 1.7686002019595448, 'ACTIVITY': 1.9786433027855892, 'SPEED': 8.2258292382642395}\n",
+      "\n",
+      "Saving response file...\n",
+      "\n",
+      "Building frames...\n",
+      "\n",
+      "Using activity file \"sims/lin_ridge/smln_2/ntwk-26794-2.npy\".\n",
+      "Frames will be saved with prefix \"sims/lin_ridge/smln_2/frames-26794-2/f-\".\n",
+      "Loading network activity...\n",
+      "Downsampling data from 2000.0 to 1000 fps...\n",
+      "Data downsampled.\n",
+      "Data loaded.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rkp/anaconda3/envs/py3/lib/python3.6/site-packages/scipy/sparse/compressed.py:774: SparseEfficiencyWarning: Changing the sparsity structure of a csc_matrix is expensive. lil_matrix is more efficient.\n",
+      "  SparseEfficiencyWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating and saving 200 frames...\n"
+     ]
+    }
+   ],
+   "source": [
+    "TRIAL = 26794\n",
+    "RUN = 2\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_2'\n",
+    "\n",
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -170,9 +220,9 @@
    "source": [
     "TRIAL = 16544\n",
     "RUN = 0\n",
-    "SAVE_DIR = 'sims/embedded/smln_1'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -317,9 +367,9 @@
    "source": [
     "TRIAL = 16544\n",
     "RUN = 1\n",
-    "SAVE_DIR = 'sims/embedded/smln_1'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -459,9 +509,9 @@
    "source": [
     "TRIAL = 16544\n",
     "RUN = 2\n",
-    "SAVE_DIR = 'sims/embedded/smln_1'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -598,9 +648,9 @@
    "source": [
     "TRIAL = 16515\n",
     "RUN = 0\n",
-    "SAVE_DIR = 'sims/embedded/smln_1'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -788,9 +838,9 @@
    "source": [
     "TRIAL = 16517\n",
     "RUN = 0\n",
-    "SAVE_DIR = 'sims/embedded/smln_1'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=300)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=300)"
    ]
   },
   {
@@ -927,9 +977,9 @@
    "source": [
     "TRIAL = 16556\n",
     "RUN = 0\n",
-    "SAVE_DIR = 'sims/embedded/smln_1'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -1100,9 +1150,9 @@
    "source": [
     "TRIAL = 16556\n",
     "RUN = 1\n",
-    "SAVE_DIR = 'sims/embedded/smln_1'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=300)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=300)"
    ]
   },
   {
@@ -1213,9 +1263,9 @@
    "source": [
     "TRIAL = 16515\n",
     "RUN = 0\n",
-    "SAVE_DIR = 'sims/embedded/smln_1_rand'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1_rand'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 7), positions='random', report_every=600)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 7), positions='random', report_every=600)"
    ]
   },
   {
@@ -1352,9 +1402,9 @@
    "source": [
     "TRIAL = 16517\n",
     "RUN = 0\n",
-    "SAVE_DIR = 'sims/embedded/smln_1_rand'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_1_rand'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 7), positions='random', report_every=300)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 7), positions='random', report_every=300)"
    ]
   },
   {
@@ -1454,9 +1504,9 @@
    "source": [
     "TRIAL = 14388\n",
     "RUN = 1\n",
-    "SAVE_DIR = 'sims/embedded/smln_0'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_0'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 7), report_every=300)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 7), report_every=300)"
    ]
   },
   {
@@ -1549,9 +1599,9 @@
    "source": [
     "TRIAL = 14388\n",
     "RUN = 1\n",
-    "SAVE_DIR = 'sims/embedded/smln_0_rand'\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_0_rand'\n",
     "\n",
-    "embedded_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 5), positions='random', report_every=300)"
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 5), positions='random', report_every=300)"
    ]
   }
  ],
