Finish refactoring (with all tests passed).

--- a/s2_lin_ridge_trials.ipynb
+++ b/s2_lin_ridge_trials.ipynb
@@ -32,6 +32,7 @@
      "text": [
       "The following searchers were active in the last 300 s:\n",
       "\n",
+      "smln_2   36   smln_2_guided\n",
       "\n",
       "No searchers were suspended by errors.\n"
      ]
@@ -54,13 +55,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No error found in searcher 28.\n"
+      "No error found in searcher 36.\n"
      ]
     }
    ],
    "source": [
     "# read optional error message\n",
-    "lin_ridge.read_search_error(searcher_id=28)"
+    "lin_ridge.read_search_error(searcher_id=36)"
    ]
   },
   {
