--- a/s3_lin_ridge_trials.ipynb
+++ b/s3_lin_ridge_trials.ipynb
@@ -65,7 +65,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating and saving 200 frames...\n"
+      "Generating and saving 200 frames...\n",
+      "2 frames completed after 629.771 s...\n"
      ]
     }
    ],
