--- a/s3_lin_ridge_trials.ipynb
+++ b/s3_lin_ridge_trials.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -45,8 +45,8 @@
       "\n",
       "Building frames...\n",
       "\n",
-      "Using activity file \"sims/lin_ridge/smln_2/ntwk-26794-2.npy\".\n",
-      "Frames will be saved with prefix \"sims/lin_ridge/smln_2/frames-26794-2/f-\".\n",
+      "Using activity file \"sims/lin_ridge/smln_2/ntwk-26794-0.npy\".\n",
+      "Frames will be saved with prefix \"sims/lin_ridge/smln_2/frames-26794-0/f-\".\n",
       "Loading network activity...\n",
       "Downsampling data from 2000.0 to 1000 fps...\n",
       "Data downsampled.\n",
@@ -60,18 +60,25 @@
       "/Users/rkp/anaconda3/envs/py3/lib/python3.6/site-packages/scipy/sparse/compressed.py:774: SparseEfficiencyWarning: Changing the sparsity structure of a csc_matrix is expensive. lil_matrix is more efficient.\n",
       "  SparseEfficiencyWarning)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating and saving 200 frames...\n",
-      "2 frames completed after 629.771 s...\n"
-     ]
     }
    ],
    "source": [
     "TRIAL = 26794\n",
+    "RUN = 0\n",
+    "SAVE_DIR = 'sims/lin_ridge/smln_2'\n",
+    "\n",
+    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "TRIAL = 27322\n",
     "RUN = 2\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_2'\n",
     "\n",
